RESOLVED FIXED144143
Context menus are not reshown after an orientation change
https://bugs.webkit.org/show_bug.cgi?id=144143
Summary Context menus are not reshown after an orientation change
Jon Honeycutt
Reported 2015-04-24 01:49:22 PDT
Context menus are hidden during an orientation change and do not reappear when the rotation completes. 1. Navigate to <http://i.imgur.com/ZoLUQOS.jpg> 2. Long-press on the image to get a context menu 3. Rotate the device Context menu should continue to show, but it is dismissed. On a debug build, long-pressing again after rotation results in an assertion failure. <rdar://problem/20679931>
Attachments
Patch (1.53 KB, patch)
2015-04-24 01:55 PDT, Jon Honeycutt
darin: review+
Jon Honeycutt
Comment 1 2015-04-24 01:55:22 PDT
David Kilzer (:ddkilzer)
Comment 2 2015-04-24 03:45:05 PDT
Jon says this may be a regression from Bug 133582 and r169664: <http://trac.webkit.org/changeset/169664>
Jon Honeycutt
Comment 3 2015-04-27 14:59:07 PDT
Note You need to log in before you can comment on or make changes to this bug.