Context menus are not reshown after an orientation change

<https://bugs.webkit.org/show_bug.cgi?id=144143>
<rdar://problem/20679931>

Reviewed by Darin Adler.

* UIProcess/ios/WKActionSheet.mm:
(-[WKActionSheet updateSheetPosition]):
Return early if we're still in a rotation, not if the rotation is
complete.

Canonical link: https://commits.webkit.org/162290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183426 268f45cc-cd09-0410-ab3c-d52691b4dbfc